--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,8 @@
     font-size: 16px;
     cursor: pointer;
     transition: all 0.3s ease;
+    border: 3px solid var(--box-color);
+
   }
   
   .restart-btn:hover{
@@ -96,6 +98,10 @@
     width: 250px;
     font-size: 60px;
     padding: 30px 10px;
+    letter-spacing: 10px;
+    border-radius: 10px;
+    background-color: var(--bg-color);
+
   }
   
   .badges{
@@ -109,8 +115,8 @@
     border-radius: 12px;
   }
   .badge{
-    background:#c112a0;
-    font-size: 30px;
+    background: var(--box-color);
+    font-size: 20px;
     padding: 10px 10px;
     border-radius: 12px;
   }
@@ -118,11 +124,14 @@
   #user-badge{
     top: 20px;
     left: -50px;
+    letter-spacing: initial;
   }
   
   #cpu-badge{
     top: 20px;
     right: -65px;
+    letter-spacing: initial;
+
   }
 
   .modal{
