--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,18 @@
 :root {
-    --bg-color:#5c4944;
-    --text-color:#d5ab63;
-    --box-color:#3e6645;
+  --bg-color: #5c4944;
+  --text-color: #d5ab63;
+  --box-color: #3e6645;
 }
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  
 }
 
 .background {
-    background: url(/img/descarga.png);
+  background: url(/img/descarga.png);
   width: 100vw;
-  height: 100vh;
+  height: 97vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,19 +21,19 @@
 }
 
 .background h1 {
-    color: var(--text-color);
-    font-size: 2.8rem;
-    font-family: 'Lora', serif;
+  color: var(--text-color);
+  font-size: 2.8rem;
+  font-family: "Lora", serif;
 }
 
 .background p {
-    color: var(--text-color);
-    font-weight: bold;
-    font-size: 1.5rem;
-    font-family: 'Karla', sans-serif;
-    background-color: var(--box-color);
-    border-radius: 10px;
-    padding: 10px;
+  color: var(--text-color);
+  font-weight: bold;
+  font-size: 1.5rem;
+  font-family: "Karla", sans-serif;
+  background-color: var(--box-color);
+  border-radius: 10px;
+  padding: 10px;
 }
 
 .wrapper {
@@ -67,170 +66,184 @@
 }
 
 .dropping-elements img {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-.btn-container{
-    text-align: center;
-  }
-  
-  .restart-btn {
-    color: var(--text-color);
-    background-color: transparent;
-    border-radius: 12px;
-    padding: 10px 10px;
-    font-weight: bold;
-    font-size: 16px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    border: 3px solid var(--box-color);
+.btn-container {
+  text-align: center;
+}
 
-  }
-  
-  .restart-btn:hover{
-    cursor: pointer;
-    background-color: var(--box-color);
-    color: var(--text-color);
-  }
+.restart-btn {
+  color: var(--text-color);
+  background-color: transparent;
+  border-radius: 12px;
+  padding: 10px 10px;
+  font-weight: bold;
+  font-size: 16px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  border: 3px solid var(--box-color);
+}
 
-  /* ------------------------------Score board */
-.score-board{
-    text-align: center;
-    color: var(--text-color);
-    border: 3px solid var(--box-color);
-    text-align: center;
-    width: 250px;
-    font-size: 60px;
-    padding: 30px 10px;
-    letter-spacing: 10px;
-    border-radius: 10px;
-    background-color: var(--bg-color);
+.restart-btn:hover {
+  cursor: pointer;
+  background-color: var(--box-color);
+  color: var(--text-color);
+}
 
-  }
-  
-  .badges{
-      display: flex;
-      flex-direction: row;
-      flex-wrap: nowrap;
-      justify-content: space-evenly;
-      gap: 10px;
-    font-size: 1rem;
-    padding: 10px 10px;
-    border-radius: 12px;
-  }
-  .badge{
-    background: var(--box-color);
-    font-size: 20px;
-    padding: 10px 10px;
-    border-radius: 12px;
-  }
-  
-  #user-badge{
-    top: 20px;
-    left: -50px;
-    letter-spacing: initial;
-  }
-  
-  #cpu-badge{
-    top: 20px;
-    right: -65px;
-    letter-spacing: initial;
+/* ------------------------------Score board */
+.score-board {
+  text-align: center;
+  color: var(--text-color);
+  border: 3px solid var(--box-color);
+  text-align: center;
+  width: 250px;
+  font-size: 60px;
+  padding: 30px 10px;
+  letter-spacing: 10px;
+  border-radius: 10px;
+  background-color: var(--bg-color);
+}
 
-  }
+.badges {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  gap: 10px;
+  font-size: 1rem;
+  padding: 10px 10px;
+  border-radius: 12px;
+}
+.badge {
+  background: var(--box-color);
+  font-size: 20px;
+  padding: 10px 10px;
+  border-radius: 12px;
+}
 
-  .modal{
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 100%;
-    overflow: auto;
-    text-align: center;
-    background-color: rgba(26, 5, 21, 0.5);
-  }
-  
-  .modal-content{
-    display: flex;
-    flex-direction: column;
-    align-content: space-evenly;
-    gap: 10%;
-    align-items: center;
-    margin: 15% auto;
-    width: 300px;
-    height: 300px;
-    background-color: var(--bg-color);
-    color: var(--text-color);
-    border-radius: 12px;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-    text-align: center;
-    padding: 4%;
-    animation-name: modalopen;
-    animation-duration: 1s; 
-  }
-  
-  @keyframes modalopen{
-    from{
-      opacity: 0;
-    }
-  
-    to{
-      opacity: 1;
-    }
+#user-badge {
+  top: 20px;
+  left: -50px;
+  letter-spacing: initial;
+}
+
+#cpu-badge {
+  top: 20px;
+  right: -65px;
+  letter-spacing: initial;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  text-align: center;
+  background-color: rgba(26, 5, 21, 0.5);
+}
+
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  align-content: space-evenly;
+  gap: 10%;
+  align-items: center;
+  margin: 15% auto;
+  width: 300px;
+  height: 300px;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  border-radius: 12px;
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+  padding: 4%;
+  animation-name: modalopen;
+  animation-duration: 1s;
+}
+
+@keyframes modalopen {
+  from {
+    opacity: 0;
   }
 
-  @media (min-width: 260px) and (max-width: 480px) {
-  
-.background h1 {
+  to {
+    opacity: 1;
+  }
+}
+/* Footer style */
+.footer {
+  background-color: var(--bg-color);
+  height: 15px;
+}
+.footer-links {
+  background-color: var(--bg-color);
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  gap: 6%;
+  justify-content: space-evenly;
+  width: 100vw;
+  height: 20px;
+}
+
+.footer-links li a {
+  text-decoration: none;
+   color:var(--text-color);
+}
+@media (min-width: 260px) and (max-width: 480px) {
+  .background h1 {
     color: var(--text-color);
     font-size: 2rem;
-    font-family: 'Lora', serif;
+    font-family: "Lora", serif;
     margin-bottom: 9%;
     margin-top: 10%;
     text-align: center;
-}
+  }
 
-.background p {
+  .background p {
     color: var(--text-color);
     font-weight: bold;
     font-size: 1rem;
-    font-family: 'Karla', sans-serif;
+    font-family: "Karla", sans-serif;
     background-color: var(--box-color);
     border-radius: 10px;
     padding: 10px;
     margin-bottom: 5%;
+  }
+  .wrapper {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
 
-    }
-.wrapper {
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;  
-}
+  .dropping-elements {
+    display: flex;
+    flex-direction: row;
+    width: 90%;
+    height: 100px;
+    background-color: var(--box-color);
+    border-radius: 10px;
+    align-items: center;
+    align-content: center;
+    overflow: hidden;
+    margin-bottom: 10%;
+  }
 
-.dropping-elements {
-  display: flex;
-  flex-direction: row;
-width: 90%;
-height: 100px;
-  background-color: var(--box-color);
-  border-radius: 10px;
-  align-items: center;
-  align-content: center;
-  overflow: hidden;
-  margin-bottom: 10%;
+  .elements {
+    object-fit: contain;
+  }
 
-}
-
-.elements {
-  object-fit: contain;
-}
-
-.btn-container{
+  .btn-container {
     text-align: center;
   }
-  
+
   .restart-btn {
     color: var(--text-color);
     background-color: transparent;
@@ -241,17 +254,16 @@ height: 100px;
     cursor: pointer;
     transition: all 0.3s ease;
     border: 3px solid var(--box-color);
-
   }
-  
-  .restart-btn:hover{
+
+  .restart-btn:hover {
     cursor: pointer;
     background-color: var(--box-color);
     color: var(--text-color);
   }
 
   /* ------------------------------Score board */
-.score-board{
+  .score-board {
     text-align: center;
     color: var(--text-color);
     border: 3px solid var(--box-color);
@@ -262,40 +274,35 @@ height: 100px;
     letter-spacing: 10px;
     border-radius: 10px;
     background-color: var(--bg-color);
-      margin-bottom: 10%;
-
-
+    margin-bottom: 10%;
   }
-  
-  .badges{
-      display: flex;
-      flex-direction: row;
-      flex-wrap: nowrap;
-      justify-content: space-evenly;
-      gap: 10px;
+
+  .badges {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    gap: 10px;
     font-size: 1rem;
     padding: 10px 10px;
     border-radius: 12px;
   }
-  .badge{
+  .badge {
     background: var(--box-color);
     font-size: 20px;
     padding: 10px 10px;
     border-radius: 12px;
   }
-  
-  #user-badge{
+
+  #user-badge {
     top: 20px;
     left: -50px;
     letter-spacing: initial;
   }
-  
-  #cpu-badge{
+
+  #cpu-badge {
     top: 20px;
     right: -65px;
     letter-spacing: initial;
-
   }
-
-
-  }
+}
