--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@
   justify-items: center;
   align-content: center;
   border-radius: 10px;
-  padding: 35px;
+  padding: 30px;
 }
 
 .dropping-elements img {
@@ -226,19 +226,22 @@
   .dropping-elements {
     display: flex;
     flex-direction: row;
-    width: 90%;
+    width: 100%;
     height: 100px;
     background-color: var(--box-color);
     border-radius: 10px;
-    align-items: center;
-    align-content: center;
     overflow: hidden;
     margin-bottom: 10%;
+    align-content: space-between;
+    justify-content: center;
+    padding: 0;
   }
 
   .elements {
-    object-fit: contain;
+    padding: 10px;
   }
+
+ 
 
   .btn-container {
     text-align: center;
